--- a/IvasList/build.gradle
+++ b/IvasList/build.gradle
@@ -3,21 +3,25 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.4'
+        classpath 'com.android.tools.build:gradle:0.6.+'
     }
 }
 apply plugin: 'android'
 
-dependencies {
-    compile files('libs/android-support-v4.jar')
+repositories {
+    mavenCentral()
 }
 
 android {
     compileSdkVersion 17
-    buildToolsVersion "17.0.0"
+    buildToolsVersion "18.1.1"
 
     defaultConfig {
-        minSdkVersion 9
-        targetSdkVersion 16
+        minSdkVersion 10
+        targetSdkVersion 18
     }
+}
+
+dependencies {
+	compile 'com.android.support:appcompat-v7:+'
 }
