--- a/IvasList/src/main/AndroidManifest.xml
+++ b/IvasList/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".TagsActivity"
+            android:name=".TagListActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,7 +22,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".NotesActivity" />
+        <activity android:name=".NoteListActivity" />
+        <activity android:name=".NoteActivity" />
     </application>
 
 </manifest>
